Use working directory for petep.json file, add WORKING_DIR param to sh/bat files, minor fixes and refactors